Kubernetes config file/Deployment/nginx-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pod
spec:
  selector:                   #[match app:nginx for deployment management]
    matchLabels:
      app: nginx
  replicas: 2
  template:                   #[image? for new pod based on app:ngix refer spec]
    metadata:
      labels:
        app: nginx
    spec:                     #[the container spec]
      containers:
      - name: nginx-new
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-deployment-pvc
          mountPath: /etc/nginx/
      volumes:              
      - name: nginx-deployment-pvc
        persistentVolumeClaim:
          claimName: nginx-pvc
