Kubernetes config file/Deployment/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-pod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: php:7.2
          ports:
            - containerPort: 9000
