Kubernetes config file/Deployment/nginx-edited-config-map-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-vhost
              mountPath: /etc/nginx/vhost.d/test.conf
              subPath: test.conf
              readOnly: true
            - name: project-repo
              mountPath: /opt/project_repo
            - name: nginx-index
              mountPath: /opt/project_repo/index.html
              subPath: index.html
              readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: nginx-vhost
        configMap:
          name: nginx-vhost
          items:
            - key: test.conf
              path: test.conf
      - name: project-repo
        emptyDir: {}
      - name: nginx-index
        configMap:
          name: nginx-index
          items:
            - key: index.html
              path: index.html

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30008
  selector:
    app: nginx
